Added layout of calc

--- a/index.html
+++ b/index.html
@@ -8,5 +8,85 @@
     <script src="javascript.js" defer></script>
     <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="mainContainer">
+      <div class="calcContainer">
+        <section class="result">
+          <span class="answer">0</span>
+        </section>
+        <button class="calcItem dark">
+          <span class="calcText">%</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">CE</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">C</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">%</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">1/x</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">x2</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">2x</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">/</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">7</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">8</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">9</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">X</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">4</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">5</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">6</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">-</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">1</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">2</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">3</span>
+        </button>
+        <button class="calcItem dark">
+          <span class="calcText">+</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">+/-</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">0</span>
+        </button>
+        <button class="calcItem light">
+          <span class="calcText">.</span>
+        </button>
+        <button class="calcItem equal">
+          <span class="calcText">=</span>
+        </button>
+      </div>
+    </div>
+  </body>
 </html>
