--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
           <span class="calcText">C</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">%</span>
+          <span class="calcText">&#9746</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">1/x</span>
+          <span class="calcText">&#8543&#8339</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">x2</span>
+          <span class="calcText"><em>&#8339&#178</em></span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">2x</span>
+          <span class="calcText">&#178;&#8730&#8339</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">/</span>
+          <span class="calcText">&#247</span>
         </button>
         <button class="calcItem light">
           <span class="calcText">7</span>
@@ -48,7 +48,7 @@
           <span class="calcText">9</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">X</span>
+          <span class="calcText">&#215</span>
         </button>
         <button class="calcItem light">
           <span class="calcText">4</span>
@@ -60,7 +60,7 @@
           <span class="calcText">6</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">-</span>
+          <span class="calcText">&#8722</span>
         </button>
         <button class="calcItem light">
           <span class="calcText">1</span>
@@ -72,7 +72,7 @@
           <span class="calcText">3</span>
         </button>
         <button class="calcItem dark">
-          <span class="calcText">+</span>
+          <span class="calcText">&#43</span>
         </button>
         <button class="calcItem light">
           <span class="calcText">+/-</span>
@@ -84,7 +84,7 @@
           <span class="calcText">.</span>
         </button>
         <button class="calcItem equal">
-          <span class="calcText">=</span>
+          <span class="calcEqual">&#61</span>
         </button>
       </div>
     </div>
