--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="mainContainer">
       <div class="calcContainer">
-        <section class="result">
+        <section class="result kyle">
           <span class="answer">0</span>
         </section>
         <button class="calcItem dark">
