Added clear button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <body>
     <div class="mainContainer">
       <div class="calcContainer">
-        <section class="result kyle">
-          <span class="answer">0</span>
+        <section class="result">
+          <span class="equation">&nbsp</span>
+          <span class="answer">&nbsp</span>
         </section>
         <button class="calcItem dark">
           <span class="calcText">%</span>
@@ -20,7 +21,7 @@
         <button class="calcItem dark">
           <span class="calcText">CE</span>
         </button>
-        <button class="calcItem dark">
+        <button class="calcItem dark" id="clearAll">
           <span class="calcText">C</span>
         </button>
         <button class="calcItem dark">
@@ -59,7 +60,7 @@
         <button class="calcItem light">
           <span class="calcText">6</span>
         </button>
-        <button class="calcItem dark">
+        <button class="calcItem dark" id="minus">
           <span class="calcText">&#8722</span>
         </button>
         <button class="calcItem light">
@@ -71,7 +72,7 @@
         <button class="calcItem light">
           <span class="calcText">3</span>
         </button>
-        <button class="calcItem dark">
+        <button class="calcItem dark" id="plus">
           <span class="calcText">&#43</span>
         </button>
         <button class="calcItem light">
