--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="calcContainer">
         <section class="result">
           <span class="equation">&nbsp</span>
-          <span class="answer">&nbsp</span>
+          <span class="answer">0</span>
         </section>
         <button class="calcItem dark">
           <span class="calcText">%</span>
@@ -84,7 +84,7 @@
         <button class="calcItem light">
           <span class="calcText">.</span>
         </button>
-        <button class="calcItem equal">
+        <button class="calcItem equal" id="equals">
           <span class="calcEqual">&#61</span>
         </button>
       </div>
