Added id's for division and multiplication

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="calcItem dark">
           <span class="calcText">&#178;&#8730&#8339</span>
         </button>
-        <button class="calcItem dark">
+        <button class="calcItem dark" id="divide">
           <span class="calcText">&#247</span>
         </button>
         <button class="calcItem light">
@@ -48,7 +48,7 @@
         <button class="calcItem light">
           <span class="calcText">9</span>
         </button>
-        <button class="calcItem dark">
+        <button class="calcItem dark" id="multiply"">
           <span class="calcText">&#215</span>
         </button>
         <button class="calcItem light">
